really janky suggestion form

--- a/app/assets/stylesheets/neighbours.sass
+++ b/app/assets/stylesheets/neighbours.sass
@@ -1,6 +1,7 @@
 // just an override for elections at the moment
 
 @import 'modules/variables'
+@import 'components/block-form'
 
 .main
   background-color: var(--faint)
@@ -57,7 +58,7 @@
     display: none
 
 .filter
-  top: 0
+  top: -1rem
   position: sticky
   position: -webkit-sticky
   padding: 2rem
