--- a/app/views/projects/neighbours/services/_services.html.haml
+++ b/app/views/projects/neighbours/services/_services.html.haml
@@ -1,3 +1,3 @@
 %ul.services
-  - (services + services + services).each do |service|
+  - services.each do |service|
     %li= render partial: 'service', locals: {service: service}
