typo on suggestion page

--- a/app/views/projects/neighbours/services/new.html.haml
+++ b/app/views/projects/neighbours/services/new.html.haml
@@ -2,7 +2,7 @@
   .wrapper.-small{role: 'layout'}
     %header.page-header
       %h2.h.-h4.-centered
-        If you're offering a service or know of one being offered, submit the details below and we're add it to our directory.
+        If you're offering a service or know of one being offered, submit the details below and we'll add it to our directory.
 
     .block
       = form_with url: [:projects, :neighbours, :services], method: :post, data: {remote: false} do |f|
