--- a/app/views/home/imprint.html.haml
+++ b/app/views/home/imprint.html.haml
@@ -2,7 +2,7 @@
 - description "Dublin Inquirer is an independent, reader-supported newspaper serving Ireland's capital"
 - set_meta_tags canonical: "https://www.dublininquirer.com/imprint"
 
-- cache ['imprint', 'v4'] do
+- cache ['imprint', 'v5'] do
   %header.page-header
     %h1.h.-h2 Dublin Inquirer is an independent newspaper launched in June 2015 to provide quality coverage of city affairs.
 
@@ -10,30 +10,30 @@
     .p.-t3.-centered
       .wrapper.-small{role: 'layout'}
         .block.-my2
-          %h4.h.-h4 Managing editor
-          %p #{ link_to @staff[:editor].full_name, @staff[:editor] }
-
+          %h4.h.-h4 Editor
+          %p= link_to "Stephanie Costello", "/contributors/stephanie-costello"
         .block.-my2
-          %h4.h.-h4 Deputy editor
-          %p #{ link_to @staff[:deputy].full_name, @staff[:deputy] }
-
+          %h4.h.-h4 Subeditor
+          %p= link_to "Rae Bathgate", "/contributors/rae-bathgate"
         .block.-my2
           %h4.h.-h4 City reporters
-          - @staff[:reporters].each do |reporter|
-            %p #{ link_to reporter.full_name, reporter }
-
+          %p= link_to "Donal Corrigan", "/contributors/donal-corrigan"
+          %p= link_to "Laoise Neylon", "/contributors/laoise-neylon"
         .block.-my2
           %h4.h.-h4 Web
-          %p #{ link_to @staff[:tech].full_name, @staff[:tech] }
-
-        .block.-my2
-          %h4.h.-h4 Columnists
-          - @columnists.each do |author|
-            %p #{ link_to author.full_name, author }
-
+          %p= link_to "Brian Flanagan", "/contributors/brian-flanagan"
         .block.-my2
           %h4.h.-h4 Regular contributors
-          - @contributors.each do |author|
-            %p #{ link_to author.full_name, author }
+          %p= link_to "Doireann Ansbro", "/contributors/doireann-ansbro"
+          %p= link_to "Nicky Daly", "/contributors/nicky-daly"
+          %p= link_to "Sean Finnan", "/contributors/sean-finnan"
+          %p= link_to "Maeve L'Estrange", "/contributors/maeve-l-estrange"
+          %p= link_to "Erin McGuire", "/contributors/erin-mcguire"
+          %p= link_to "Dean Van Nguyen", "/contributors/dean-van-nguyen"
+          %p= link_to "Dan Seery", "/contributors/dan-seery"
+        .block.-my2
+          %h4.h.-h4 Founders
+          %p= link_to "Lois Kapila", "/contributors/lois-kapila"
+          %p= link_to "Sam Tranum", "/contributors/sam-tranum"
 
 = render partial: 'products/enticement'
