--- a/app/views/layouts/partials/_primary-footer.html.haml
+++ b/app/views/layouts/partials/_primary-footer.html.haml
@@ -21,21 +21,16 @@
           .hidden.-md-show
             .block.-mb4.p.-sf
               %p
-                %big.c.-w4 Managing editor
-                = link_to "Lois Kapila", "/contributors/lois-kapila"
+                %big.c.-w4 Editor
+                = link_to "Stephanie Costello", "/contributors/stephanie-costello"
               %p
-                %big.c.-w4 Deputy editor
-                = link_to "Sam Tranum", "/contributors/sam-tranum"
+                %big.c.-w4 Subeditor
+                = link_to "Rae Bathgate", "/contributors/rae-bathgate"
               %p
                 %big.c.-w4 City reporters
-                = link_to "Erin McGuire", "/contributors/erin-mcguire"
+                = link_to "Donal Corrigan", "/contributors/donal-corrigan"
                 <br>
                 = link_to "Laoise Neylon", "/contributors/laoise-neylon"
-                <br>
-                = link_to "Donal Corrigan", "/contributors/donal-corrigan"
-              %p
-                %big.c.-w4 Web
-                = link_to "Brian Flanagan", "/contributors/brian-flanagan"
 
         .col-xs-12.col-md-3
           .block.-mb4
