update title for sam & lois

--- a/app/views/home/imprint.html.haml
+++ b/app/views/home/imprint.html.haml
@@ -32,7 +32,7 @@
           %p= link_to "Dean Van Nguyen", "/contributors/dean-van-nguyen"
           %p= link_to "Dan Seery", "/contributors/dan-seery"
         .block.-my2
-          %h4.h.-h4 Founders
+          %h4.h.-h4 Founders &amp; team members
           %p= link_to "Lois Kapila", "/contributors/lois-kapila"
           %p= link_to "Sam Tranum", "/contributors/sam-tranum"
 
