--- a/app/views/layouts/partials/_primary-footer.html.haml
+++ b/app/views/layouts/partials/_primary-footer.html.haml
@@ -24,13 +24,15 @@
                 %big.c.-w4 Editor
                 = link_to "Stephanie Costello", "/contributors/stephanie-costello"
               %p
-                %big.c.-w4 Subeditor
-                = link_to "Rae Bathgate", "/contributors/rae-bathgate"
-              %p
                 %big.c.-w4 City reporters
                 = link_to "Donal Corrigan", "/contributors/donal-corrigan"
                 <br>
                 = link_to "Laoise Neylon", "/contributors/laoise-neylon"
+              %p
+                %big.c.-w4 Founders &amp; team members
+                = link_to "Lois Kapila", "/contributors/lois-kapila"
+                <br>
+                = link_to "Sam Tranum", "/contributors/sam-tranum"
 
         .col-xs-12.col-md-3
           .block.-mb4
