rm dan seery link for now

--- a/app/views/home/imprint.html.haml
+++ b/app/views/home/imprint.html.haml
@@ -28,6 +28,6 @@
           %p= link_to "Maeve L'Estrange", "/contributors/maeve-l-estrange"
           %p= link_to "Erin McGuire", "/contributors/erin-mcguire"
           %p= link_to "Dean Van Nguyen", "/contributors/dean-van-nguyen"
-          %p= link_to "Dan Seery", "/contributors/dan-seery"
+          %p= link_to "Dan Seery", "#/contributors/dan-seery"
 
 = render partial: 'products/enticement'
