add student plan

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -96,8 +96,9 @@
         .block.-mb2
           %h3.h.-h3.-centered Become a subscriber:
         .p.-t4.-centered
-          = link_to raw("Digital + Print &mdash; €8/month"), product_path(:print), class: 'block button -standard -big'
+          = link_to raw("Digital + Print &mdash; €8/month"), product_path(:print), class: 'block -mb1 button -standard -big'
           = link_to raw("Digital &mdash; €5/month"), product_path(:digital), class: 'block -mb1 button -standard -big'
+          = link_to raw("Student (Digital-only) &mdash; €2.50/month"), product_path(:student), class: 'block button -standard -big'
 
 .block.-bt.-py4.-bg-faint
   .wrapper.-small{role: 'layout'}
@@ -113,9 +114,9 @@
 
           _Reader-funded_ means the _vast_ majority of our revenue comes from readers who subscribe. We think this aligns our incentives with those of our readers, rather than those of advertisers.
 
-          #### Is there a student/unwaged rate?
+          #### Is there an unwaged rate?
 
-          Nobody will be turned away for want of funds. If you're a student, not working, or otherwise unable to afford a subscription, send [us an email](mailto:info@dublininquirer.com) and we'll see if we can work something out.
+          Nobody will be turned away for want of funds. If you're not working or are otherwise unable to afford a subscription, send [us an email](mailto:info@dublininquirer.com) and we'll see if we can work something out.
 
           #### What is the cancellation policy?
 
