--- a/app/views/layouts/front.html.haml
+++ b/app/views/layouts/front.html.haml
@@ -34,7 +34,9 @@
       .block.-bt
         = render partial: 'layouts/partials/primary-footer'
 
-      = render partial: 'user_sessions/cookies'
+      = render layout: 'layouts/partials/fixed-bottom' do
+        = render partial: 'user_sessions/cookies-content'
+
       - if permission_for_cookie?
         = render partial: 'user_sessions/delinquent'
 
