--- a/app/views/home/imprint.html.haml
+++ b/app/views/home/imprint.html.haml
@@ -11,26 +11,24 @@
       .wrapper.-small{role: 'layout'}
         .block.-my2
           %h4.h.-h4 Editor
-          %p= link_to "Stephanie Costello", "/contributors/stephanie-costello"
+          %p= link_to "Lois Kapila", "/contributors/lois-kapila"
+        .block.-my2
+          %h4.h.-h4 Deputy editor
+          %p= link_to "Sam Tranum", "/contributors/sam-tranum"
         .block.-my2
           %h4.h.-h4 City reporters
           %p= link_to "Donal Corrigan", "/contributors/donal-corrigan"
           %p= link_to "Laoise Neylon", "/contributors/laoise-neylon"
         .block.-my2
-          %h4.h.-h4 Founders &amp; team members
-          %p= link_to "Lois Kapila", "/contributors/lois-kapila"
-          %p= link_to "Sam Tranum", "/contributors/sam-tranum"
-        .block.-my2
           %h4.h.-h4 Web
           %p= link_to "Brian Flanagan", "/contributors/brian-flanagan"
         .block.-my2
           %h4.h.-h4 Regular contributors
-          %p= link_to "Doireann Ansbro", "/contributors/doireann-ansbro"
-          %p= link_to "Nicky Daly", "/contributors/nicky-daly"
+          %p= link_to "Stephanie Costello", "/contributors/stephanie-costello"
           %p= link_to "Sean Finnan", "/contributors/sean-finnan"
           %p= link_to "Maeve L'Estrange", "/contributors/maeve-l-estrange"
-          %p= link_to "Erin McGuire", "/contributors/erin-mcguire"
-          %p= link_to "Dean Van Nguyen", "/contributors/dean-van-nguyen"
+          %p= link_to "Shamim Malekmian", "/contributors/shamim-malekmian"
           %p= link_to "Dan Seery", "#/contributors/dan-seery"
+          %p= link_to "Dean Van Nguyen", "/contributors/dean-van-nguyen"
 
 = render partial: 'products/enticement'
