--- a/app/views/layouts/partials/_primary-footer.html.haml
+++ b/app/views/layouts/partials/_primary-footer.html.haml
@@ -22,17 +22,15 @@
             .block.-mb4.p.-sf
               %p
                 %big.c.-w4 Editor
-                = link_to "Stephanie Costello", "/contributors/stephanie-costello"
+                = link_to "Lois Kapila", "/contributors/lois-kapila"
+              %p
+                %big.c.-w4 Deputy editor
+                = link_to "Sam Tranum", "/contributors/sam-tranum"
               %p
                 %big.c.-w4 City reporters
                 = link_to "Donal Corrigan", "/contributors/donal-corrigan"
                 <br>
                 = link_to "Laoise Neylon", "/contributors/laoise-neylon"
-              %p
-                %big.c.-w4 Founders &amp; team members
-                = link_to "Lois Kapila", "/contributors/lois-kapila"
-                <br>
-                = link_to "Sam Tranum", "/contributors/sam-tranum"
 
         .col-xs-12.col-md-3
           .block.-mb4
