fix typo on dan s

--- a/app/views/home/imprint.html.haml
+++ b/app/views/home/imprint.html.haml
@@ -28,7 +28,7 @@
           %p= link_to "Sean Finnan", "/contributors/sean-finnan"
           %p= link_to "Maeve L'Estrange", "/contributors/maeve-l-estrange"
           %p= link_to "Shamim Malekmian", "/contributors/shamim-malekmian"
-          %p= link_to "Dan Seery", "#/contributors/dan-seery"
+          %p= link_to "Dan Seery", "/contributors/dan-seery"
           %p= link_to "Dean Van Nguyen", "/contributors/dean-van-nguyen"
 
 = render partial: 'products/enticement'
