update welcome email to indicate no immediate shipping

--- a/app/views/user_mailer/welcome_print.text.erb
+++ b/app/views/user_mailer/welcome_print.text.erb
@@ -1,6 +1,6 @@
 Hi <%= @given_name.present? ? @given_name : 'there' %>,
 
-I just wanted to say thanks so much for subscribing to Dublin Inquirer. You should see your first issue in the post soon.
+I just wanted to say thanks so much for subscribing to Dublin Inquirer. You now have full access to all our content online, and will receive your first print edition in the post when we ship the next issue (usually around the middle of the month).
 
 I really hope you enjoy reading the stories we tell each week, and if you've opted in to our newsletter then we'll keep you up-to-date with newsroom developments, and any offline activities through that, too.
 
