replace tinyletter with mailchimp

--- a/app/assets/stylesheets/components/_cta-form.sass
+++ b/app/assets/stylesheets/components/_cta-form.sass
@@ -13,6 +13,9 @@
     .field
       flex-grow: 1
       display: flex
+      
+      label
+        display: none
 
       input
         padding: var(--baseline)
