--- a/app/views/layouts/partials/_primary-flag.html.haml
+++ b/app/views/layouts/partials/_primary-flag.html.haml
@@ -24,11 +24,14 @@
           .block.-bg-white.-b.-py1
             .p.-t5.-centered
               %h5 Get our weekly newsletter
-              %form.tiny-form{action: "https://tinyletter.com/DublinInquirer", method: "post", onsubmit: "window.open('https://tinyletter.com/DublinInquirer', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true", target: "popupwindow"}
+              %form#mc-embedded-subscribe-form.tiny-form{:action => "https://dublininquirer.us10.list-manage.com/subscribe/post?u=24e41bd5d7188febc86b710f7&id=b34685dddf", :method => "post", :name => "mc-embedded-subscribe-form", :novalidate => "", :target => "_blank"}
                 .field
-                  %input{name: 'email', type: 'email', placeholder: 'Enter your email'}
+                  %label{:for => "mce-EMAIL"} Email Address
+                  %input#mce-EMAIL.required.email{:name => "EMAIL", :type => "email", :value => "", placeholder: 'Enter your email'}/
+                  %div{"aria-hidden" => "true", :style => "position: absolute; left: -9999px;"}
+                    %input{:name => "b_24e41bd5d7188febc86b710f7_b34685dddf", :tabindex => "-1", :type => "text", :value => ""}/
                 .action
-                  %input{type: 'submit', value: 'Sign up', class: 'text-button'}
+                  %input#mc-embedded-subscribe.text-button{:name => "subscribe", :type => "submit", :value => "Sign up"}/
 
     .block.-hr
       = render partial: 'layouts/partials/content-nav'
