use published_on for standard template

--- a/app/views/articles/templates/_standard.html.haml
+++ b/app/views/articles/templates/_standard.html.haml
@@ -3,7 +3,7 @@
     .wrapper.-small{role: 'layout'}
       .block.-my2
         .p.-t4
-          #{ link_to @article.issue.issue_date.strftime('%-d %B %Y'), @article.issue } &mdash;
+          #{ link_to @article.published_on.strftime('%-d %B %Y'), @article.issue } &mdash;
           #{ link_to display_category(@article.category), category_path(@article.category) }
 
     .wrapper.-medium{role: 'layout'}
