update the footer w/ claudia

--- a/app/views/layouts/partials/_primary-footer.html.haml
+++ b/app/views/layouts/partials/_primary-footer.html.haml
@@ -28,9 +28,9 @@
                 = link_to "Sam Tranum", "/contributors/sam-tranum"
               %p
                 %big.c.-w4 City reporters
-                = link_to "Donal Corrigan", "/contributors/donal-corrigan"
-                <br>
                 = link_to "Laoise Neylon", "/contributors/laoise-neylon"
+                <br>
+                = link_to "Claudia Dalby", "/contributors/claudia-dalby"
 
         .col-xs-12.col-md-3
           .block.-mb4
