--- a/app/views/home/imprint.html.haml
+++ b/app/views/home/imprint.html.haml
@@ -17,14 +17,15 @@
           %p= link_to "Sam Tranum", "/contributors/sam-tranum"
         .block.-my2
           %h4.h.-h4 City reporters
-          %p= link_to "Donal Corrigan", "/contributors/donal-corrigan"
           %p= link_to "Laoise Neylon", "/contributors/laoise-neylon"
+          %p= link_to "Claudia Dalby", "/contributors/claudia-dalby"
         .block.-my2
           %h4.h.-h4 Web
           %p= link_to "Brian Flanagan", "/contributors/brian-flanagan"
         .block.-my2
           %h4.h.-h4 Regular contributors
           %p= link_to "Stephanie Costello", "/contributors/stephanie-costello"
+          %p= link_to "Donal Corrigan", "/contributors/donal-corrigan"
           %p= link_to "Sean Finnan", "/contributors/sean-finnan"
           %p= link_to "Maeve L'Estrange", "/contributors/maeve-l-estrange"
           %p= link_to "Shamim Malekmian", "/contributors/shamim-malekmian"
