--- a/app/views/home/imprint.html.haml
+++ b/app/views/home/imprint.html.haml
@@ -20,7 +20,7 @@
           %p= link_to "Laoise Neylon", "/contributors/laoise-neylon"
           %p= link_to "Claudia Dalby", "/contributors/claudia-dalby"
         .block.-my2
-          %h4.h.-h4 Web
+          %h4.h.-h4 Tech
           %p= link_to "Brian Flanagan", "/contributors/brian-flanagan"
         .block.-my2
           %h4.h.-h4 Regular contributors
