--- a/app/assets/stylesheets/shared/_block.sass
+++ b/app/assets/stylesheets/shared/_block.sass
@@ -262,6 +262,9 @@
     display: flex
     flex-direction: row
     justify-content: flex-start
+    
+  &.-artworked
+    padding-top: 13rem
 
 .flex
   display: flex
