--- a/app/views/products/_enticement.html.haml
+++ b/app/views/products/_enticement.html.haml
@@ -47,7 +47,7 @@
                   %h3.h.-h2 Understand your city
                 .p.-t3.-serif.-sf
                   :markdown
-                    We do in-depth, shoe-leather reporting about the issues that shape Dublin. We're not funded by advertisers. We're funded by readers like you.
+                    We do in-depth, original reporting about the issues that shape Dublin. We're not funded by advertisers. We're funded by readers like you.
 
                 %nav.block.-mt4
                   = link_to raw("Become a subscriber &rarr;"), :products, class: 'button -standard -big'
