--- a/app/views/layouts/front.html.haml
+++ b/app/views/layouts/front.html.haml
@@ -11,9 +11,9 @@
 
     = csrf_meta_tags
     = csp_meta_tag
-    <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    = stylesheet_link_tag 'application', media: 'all'
-    = javascript_include_tag 'application'
+    
+    = javascript_pack_tag 'application'
+    = stylesheet_pack_tag 'application'
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
