--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,16 +12,9 @@
     = csrf_meta_tags
     = csp_meta_tag
     
-    = javascript_packs_with_chunks_tag 'application'
-    = stylesheet_packs_with_chunks_tag 'application'
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4000ff">
-    <meta name="msapplication-TileColor" content="#4000ff">
-    <meta name="theme-color" content="#ff0000">
+    = render partial: "layouts/partials/packs"
+    = render partial: "layouts/snippets/favicon"
+    
     %meta{name: 'viewport', content: "width=device-width, initial-scale=1, user-scalable=no"}/
 
   %body
