add admin entrypoints

--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -24,7 +24,7 @@
 - cache ['articles', @article, @template, @limited] do
   .block.-pb4= render partial: "articles/templates/#{ @template }", locals: { article: @article, limited: @limited }
 
-= render partial: 'shared/newsletter-cta'
+= render partial: 'layouts/partials/newsletter'
 
 - cache ['articles', @article, @article.authors, 'meta'] do
   .block.-bt.-py4.-mt4
