--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -5,9 +5,11 @@
     = display_meta_tags site: 'Dublin Inquirer'
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag    'admin', media: 'all'
-    = javascript_include_tag 'admin'
-
+    
+    = javascript_pack_tag 'admin'
+    = stylesheet_pack_tag 'admin'
+    
+    = render partial: "layouts/snippets/favicon"
   %body.admin
     .progress-bar.-fixed &nbsp;
     .admin{role: 'layout'}
