--- a/app/views/layouts/error.html.haml
+++ b/app/views/layouts/error.html.haml
@@ -10,8 +10,9 @@
 
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag    'application', media: 'all'
-    = javascript_include_tag 'application'
+    
+    = render partial: "layouts/partials/packs"
+    = render partial: "layouts/snippets/favicon"
 
   %body
     .centered{role: 'layout'}
