get images loading

--- a/app/views/articles/excerpts/_election.html.haml
+++ b/app/views/articles/excerpts/_election.html.haml
@@ -8,4 +8,4 @@
         We asked our readers what they want candidates in the upcoming elections to discuss as they compete for votes. See what the candidates have to say on those topics.
       
     %figure
-      = image_tag "elections/image.jpg"
+      = image_pack_tag "static/image.jpg"
