--- a/app/views/projects/election_surveys/_portrait.html.haml
+++ b/app/views/projects/election_surveys/_portrait.html.haml
@@ -1,5 +1,5 @@
-- path = "candidates/#{ candidate.slug }.jpg"
+- path = "static/#{ candidate.slug }.jpg"
 - if asset_exists?(path)
-  .artwork.-portrait.-square= image_tag(path, alt: "a portrait of #{ candidate.name }")
+  .artwork.-portrait.-square= image_pack_tag(path, alt: "a portrait of #{ candidate.name }")
 - else
-  .artwork.-portrait.-square= image_tag("candidates/missing.jpg", alt: "we don't have a picture of #{ candidate.name }")
+  .artwork.-portrait.-square= image_pack_tag("static/missing.jpg", alt: "we don't have a picture of #{ candidate.name }")
