--- a/app/views/layouts/partials/_primary-footer.html.haml
+++ b/app/views/layouts/partials/_primary-footer.html.haml
@@ -13,7 +13,7 @@
 
           .block.-mb4
             .p.-sf.-t5
-              = image_tag 'pci.jpg', style: 'float: left; width: 5rem; height: auto; margin-right: 1rem;'
+              = image_pack_tag 'static/pci.jpg', style: 'float: left; width: 5rem; height: auto; margin-right: 1rem;'
               :markdown
                 This publication supports the work of the Press Council of Ireland and the Office of the Press Ombudsman, and our staff operate within the Code of Practice. You can obtain a copy of the code, or contact the council, at [presscouncil.ie](https://www.presscouncil.ie), Lo-call 1890 208 080 or email: <a href="mailto:info@presscouncil.ie">info@presscouncil.ie</a>. 
 
