--- a/app/views/layouts/partials/_expansive-nav.html.haml
+++ b/app/views/layouts/partials/_expansive-nav.html.haml
@@ -1,16 +1,16 @@
-%div{role: 'overlay', id: 'menu', style: 'display: none'}
+%div{role: 'overlay', id: 'menu', class: "-hidden"}
   %div.progress-bar.-fixed &nbsp;
   %nav.meta-nav.-fixed.-omnipresent
     .wrapper.-container{role: 'layout'}
       .block.-bb
         .meta-nav_content
           .left
-            %a{class: 'meta-nav_item -close', 'data-action': 'closeOverlay'}
+            %a{class: 'meta-nav_item -close', data: {action: "layout#closeMenu"}}
               .icon
-                %svg{width: "242px", height: "242px", viewBox: "0 0 242 242"}
+                %svg{width: "24px", height: "24px", viewBox: "0 0 242 242"}
                   <rect transform="translate(121.208153, 121.208153) rotate(45.000000) translate(-121.208153, -121.208153) " x="-38.7918472" y="111.208153" width="320" height="20"></rect>
                   <rect transform="translate(121.000000, 121.000000) rotate(-45.000000) translate(-121.000000, -121.000000) " x="-39" y="111" width="320" height="20"></rect>
-
+  
   %main.sub-omnipresent
     .block.-py4
       .wrapper.-container{role: 'layout'}
@@ -22,7 +22,7 @@
               %li= link_to "Past issues", :issues
               %li= link_to "About us", :imprint
               %li= link_to "Contact us", :contact
-
+  
           .block.-mb4
             %h3.h.-h4.-centered Sections
             %ul
@@ -32,7 +32,7 @@
               %li= link_to "The Dish", category_path('the-dish')
               %li= link_to "Opinion", category_path('opinion')
               %li= link_to "Podcast", category_path('podcast')
-
+  
           .block.-mb4
             %h3.h.-h4.-centered Subscriptions
             %ul
@@ -45,12 +45,12 @@
               - if logged_in? and current_user.subscriber?
                 %li= link_to "Manage subscription", :user
               %li= link_to "Give a subscription", :gift_subscriptions
-
+  
           .block.-mb4
             %h3.h.-h4.-centered Elsewhere
             %ul
               %li= link_to "Twitter", "https://www.twitter.com/dublininquirer"
               %li= link_to "Facebook", "https://www.facebook.com/dublininquirer"
               %li= link_to "Instagram", "https://www.instagram.com/dublininquirer"
-
+  
   %footer.footer &nbsp;
