--- a/app/views/layouts/partials/_newsletter.html.haml
+++ b/app/views/layouts/partials/_newsletter.html.haml
@@ -5,7 +5,7 @@
         :markdown
           Sign up to get our free Dublin Inquirer email newsletter each Wednesday, with headlines from the week’s online edition, updates from inside the newsroom, and more. It’s a little reminder when we have a new edition out, and a way for you to stay in touch with what we’re up to.
   
-      %form#mc-embedded-subscribe-form.cta-form{:action => "https://dublininquirer.us10.list-manage.com/subscribe/post?u=24e41bd5d7188febc86b710f7&id=b34685dddf", :method => "post", :name => "mc-embedded-subscribe-form", :novalidate => "", :target => "_blank"}
+      %form#mc-embedded-subscribe-form.cta-form{:action => "https://dublininquirer.us10.list-manage.com/subscribe/post?u=24e41bd5d7188febc86b710f7&id=b34685dddf", :method => "post", :name => "mc-embedded-subscribe-form", :novalidate => "", :target => "_blank", data: {turbo: false, butts: "true"}}
         .cta-form_content
           .field
             %label{:for => "mce-EMAIL"} Email Address
