--- a/app/views/layouts/partials/_primary-flag.html.haml
+++ b/app/views/layouts/partials/_primary-flag.html.haml
@@ -24,7 +24,7 @@
           .block.-bg-white.-b.-py1
             .p.-t5.-centered
               %h5 Get our weekly newsletter
-              %form#mc-embedded-subscribe-form.tiny-form{:action => "https://dublininquirer.us10.list-manage.com/subscribe/post?u=24e41bd5d7188febc86b710f7&id=b34685dddf", :method => "post", :name => "mc-embedded-subscribe-form", :novalidate => "", :target => "_blank"}
+              %form#mc-embedded-subscribe-form.tiny-form{:action => "https://dublininquirer.us10.list-manage.com/subscribe/post?u=24e41bd5d7188febc86b710f7&id=b34685dddf", :method => "post", :name => "mc-embedded-subscribe-form", :novalidate => "", :target => "_blank", data: {turbo: "false", butts: "true"}}
                 .field
                   %label{:for => "mce-EMAIL"} Email Address
                   %input#mce-EMAIL.required.email{:name => "EMAIL", :type => "email", :value => "", placeholder: 'Enter your email'}/
