--- a/app/views/layouts/partials/_search.html.haml
+++ b/app/views/layouts/partials/_search.html.haml
@@ -1,16 +1,16 @@
-%div{role: 'overlay', id: 'search', style: 'display: none'}
+%div{role: 'overlay', id: 'search', class: '-hidden'}
   %div.progress-bar.-fixed &nbsp;
   %nav.meta-nav.-fixed.-omnipresent
     .wrapper.-container{role: 'layout'}
       .block.-bb
         .meta-nav_content
           .left
-            %a{class: 'meta-nav_item -close', 'data-action': 'closeOverlay'}
+            %a{class: 'meta-nav_item -close', data: {action: "layout#closeSearch"}}
               .icon
                 %svg{width: "242px", height: "242px", viewBox: "0 0 242 242"}
                   <rect transform="translate(121.208153, 121.208153) rotate(45.000000) translate(-121.208153, -121.208153) " x="-38.7918472" y="111.208153" width="320" height="20"></rect>
                   <rect transform="translate(121.000000, 121.000000) rotate(-45.000000) translate(-121.000000, -121.000000) " x="-39" y="111" width="320" height="20"></rect>
-
+  
   %main.sub-omnipresent.overlay-content
     %form.search-form{action: search_url, method: 'get'}
       %input{type: 'text', name: 'q', placeholder: 'Type a query and press enter'}
