--- a/app/views/layouts/partials/_packs.html.haml
+++ b/app/views/layouts/partials/_packs.html.haml
@@ -1,2 +1,2 @@
-= javascript_pack_tag 'application'
-= stylesheet_pack_tag 'application'
+= javascript_pack_tag 'application', "data-turbo-track" => "reload"
+= stylesheet_pack_tag 'application', "data-turbo-track" => "reload"
