add tagify for tags

--- a/app/packs/entrypoints/admin.css
+++ b/app/packs/entrypoints/admin.css
@@ -16,5 +16,8 @@
 @import "../stylesheets/admin/form.css";
 @import "../stylesheets/admin/data.css";
 @import "../stylesheets/admin/notes.css";
+@import "../stylesheets/admin/preview.css";
 @import "../stylesheets/admin/select.css";
 @import "../stylesheets/admin/search-form.css";
+
+@import "@yaireo/tagify/dist/tagify.css";
