--- a/app/packs/stylesheets/admin/basics.css
+++ b/app/packs/stylesheets/admin/basics.css
@@ -11,6 +11,15 @@ body {
   line-height: calc(25 / 18);
 }
 
+input[autocomplete="off"]::-webkit-contacts-auto-fill-button {
+  visibility: hidden;
+  display: none !important;
+  pointer-events: none;
+  height: 0;
+  width: 0;
+  margin: 0;
+}
+
 ::selection {
   color: var(--bg);
   background: var(--blue);
