Add euro signs back

--- a/app/views/gift_subscriptions/christmas.html.haml
+++ b/app/views/gift_subscriptions/christmas.html.haml
@@ -33,8 +33,8 @@
 
             .block.-px2.-pt3.-pb3.-bg-faint
               %nav
-                = link_to raw("One year &mdash; #{9 * 10}"), gift_subscription_path(id: 'print-full'), class: 'button -standard -big block -mb1'
-                = link_to raw("Half year &mdash; #{9 * 5}"), gift_subscription_path(id: 'print-half'), class: 'button -standard -big block'
+                = link_to raw("One year &mdash; €#{9 * 10}"), gift_subscription_path(id: 'print-full'), class: 'button -standard -big block -mb1'
+                = link_to raw("Half year &mdash; €#{9 * 5}"), gift_subscription_path(id: 'print-half'), class: 'button -standard -big block'
 
 .block.-bt.-bg-default.-py4
   .block.-my4
