add cancellation w/in the app

--- a/app/assets/stylesheets/shared/_button.sass
+++ b/app/assets/stylesheets/shared/_button.sass
@@ -101,3 +101,11 @@
     color: var(--blue)
     border-color: transparent
     cursor: pointer
+
+.buttons.-options
+  display: flex
+  flex-direction: column
+  justify-content: flex-start
+  align-items: center
+  .button + .button
+    margin-top: 1rem
