mock in the pricing thing

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -19,7 +19,7 @@
 
             .block.-px2.-pt3.-pb3.-bg-faint
               .p.-t4.-centered
-                = link_to raw("Subscribe for €6/month"), product_path(:digital), class: 'button -standard -big'
+                = link_to raw("Subscribe from €6/month"), product_path(:digital), class: 'button -standard -big'
 
         .col-xs-12.col-md-6.flex
           .block.-bg-default.-b.flex.-c.-sb.-mt2
@@ -30,7 +30,7 @@
 
             .block.-px2.-pt3.-pb3.-bg-faint
               .p.-t4.-centered
-                = link_to raw("Subscribe for €9/month"), product_path(:print), class: 'button -standard -big'
+                = link_to raw("Subscribe from €9/month"), product_path(:print), class: 'button -standard -big'
 
 .block.-bt.-bg-default.-py4
   .block.-my4.-pt4
